lab/k8s/jupyter-lab/3-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
  labels:
    app: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      containers:
      - name: jupyter
        image: jupyter/minimal-notebook:latest
        ports:
        - containerPort: 8888
        resources: {}
        volumeMounts:
        - mountPath: /home/jovyan/work
          name: jupyter-data
      restartPolicy: OnFailure
      volumes:
      - name: rstudio
        persistentVolumeClaim:
          claimName: rstudio-data
