lab/k8s/jupyter-lab/4-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter
  namespace: jupyter
spec:
  selector:
    app: jupyter
  ports:
    - port: 10001
      targetPort: 8888
  type: ClusterIP
