lab/k8s/jupyter-lab/5-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: jupyter
          servicePort: 10001
